--- a/ContactApp/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ContactApp/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -29,8 +29,7 @@
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/contact-list']"
-              >Contact list</a
-            >
+              >Contact list</a>
           </li>
         </ul>
         <app-login-menu></app-login-menu>
